--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ h2 {
     font-size: 20px;
 }
 
-body {
+#startPageBody {
     background-image: url("images/familydinner.jpg");
     background-size: cover;
 }
