--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ h2 {
     background-image: url("images/familydinner.jpg");
     background-size: cover;
 }
-#pageHeader {
+#startPageHeader {
 	 background:rgba(255,255,255,0.7);
 }
 #startPageDescription {
