--- a/styling.css
+++ b/styling.css
@@ -1,3 +1,10 @@
+.col-md-2{
+	padding-top: 20px;
+	width: 20%;
+	float: left;
+	height: 200px;
+}
+
 #headerViewAllDishes {
 	text-align: left;
 	font-style: normal;
@@ -7,62 +14,25 @@
 	background-color:#abdeee;
 }
 
-#asideViewAllDishes {
-	line-height: 30px;
-    background-color: #eeeeee;
-    height: 400px;
-    width: 200px;
-    float: left;
-    padding: 5px; 
-}
-
-#trViewAllDishes {
-	padding: 5px;	
-}
-
-#hrViewAllDishes {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #000;
-    margin: 1em 0;
-    padding: 0;
-}
-
-#selectDish {
-	height: 120px;
-	width: 800px;
-	background-color:#aacaae;
-    float:left;
-    padding:10px;	
-}
 #menuScroll {
-	max-width:800px;
-	background-color:#acceee;
-	overflow: auto;
-    float:left;
-    padding:10px;	
+	overflow: visible;
+    overflow-y: scroll;	
 }
 
-#menu {
-	table-layout: fixed;
-	white-space: pre-wrap;
-}
-#foodDescription {
-	max-width: 150px;
-	max-height: 150px;
-	white-space: nowrap; /*somethng here is not correct, dunno yet how to fix it.*/
+#allDishDescriptions {
+	width: 150px;
+	height: 43px;
 	overflow: hidden;
-	text-align: center;
-	text-overflow: ellipsis;	
 }
-#foodPic {
-	align: center;
-	max-width: 150px;
-	max-height: 150px;
+
+#allDishPics {
+	float: center;
+	height: 100px;
+	width: 150px;
 }
-#foodName{
+
+#allDishNames {
 	text-align: center;
-	max-width: 150px;
-	max-height: 150px;
+	height: 40px;
+	width: 150px;	
 }
