--- a/styling.css
+++ b/styling.css
@@ -5,6 +5,48 @@
 	height: 200px;
 }
 
+.col-md-6 {
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+.col-md-offset-6 {
+	padding-top: 5px;
+	padding-bottom: 5px;	
+}
+
+#guestDiv {
+	float: left;
+	font-size: 13pt;
+	padding-bottom: 5px;
+}
+
+#confirmDinnerButton {
+	text-align: center;
+}
+
+#confirmDinner {
+	width: 80%;
+}
+
+#guestPopulateDiv {
+	float: left;
+	padding-bottom: 5px;
+}
+
+#dishNameDiv {
+	background-color: #C8C8C8;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+#costDiv {
+	background-color: #C8C8C8;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	float: right;
+}
+
 #headerViewAllDishes {
 	text-align: left;
 	font-style: normal;
@@ -25,6 +67,7 @@
 	width: 150px;
 	height: 43px;
 	overflow: hidden;
+	padding-left: 20px;
 }
 
 #allDishPics {
@@ -44,7 +87,18 @@
 }
 
 #selectDish {
-	height: 150px;
-	/*padding-top: 50px;*/
-	padding-bottom: 50px;
+	height: 200px;
+	background-color: #FFFF99;
+	padding-top: 40px;
+	padding-bottom: 40px;
+	padding-left: 40px;
+}
+
+#hrViewAllDishes {
+	color: #000000;
+	background-color: #000000;
+	height: 2px;
+}
+#separatorDiv {
+	height: 40px;
 }
