--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@ h3{
 body {
     background: white;
 }
+button {
+    background: #FFCC80;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+}
 
 #pageTitle {
     color: black;
@@ -68,71 +72,16 @@ body {
 #ingredientList {
     border-style: solid;
 }
+#backButton {
+    margin-top: 10px;
+}
 
 /*viewAllDishes*/
-.col-md-2{
-    padding-top: 20px;
-    width: 20%;
-    float: left;
-    height: 200px;
-}
-
-.col-md-6 {
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-
-.col-md-offset-6 {
-    padding-top: 5px;
-    padding-bottom: 5px;    
-}
-
-#guestDiv {
-    float: left;
-    font-size: 13pt;
-    padding-bottom: 5px;
-}
-
-#confirmDinnerButton {
-    text-align: center;
-}
-
-#confirmDinner {
-    width: 80%;
-}
-
-#guestPopulateDiv {
-    float: left;
-    padding-bottom: 5px;
-}
-
-#dishNameDiv {
-    background-color: #C8C8C8;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-
-#costDiv {
-    background-color: #C8C8C8;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    float: right;
-}
-
-#headerViewAllDishes {
-    text-align: left;
-    font-style: normal;
-    font-family: "Times New Roman", Times, serif;
-    font-size: 50px;
-    padding: 5px;
-    background-color:#abdeee;
-}
 
 #menuScroll {
     overflow: hidden;
     overflow-y: scroll;
-    height: 200px;
-    /*padding-top: 50px;    */
+    height: 300px;
 }
 
 #allDishDescriptions {
@@ -154,25 +103,27 @@ body {
     width: 150px;   
 }
 
-#twoSections {
-    height: 600px;
+#searchDish {
+    border: solid;
+    margin-left: 10px;
 }
 
 #selectDish {
-    height: 200px;
-    background-color: #FFFF99;
     padding-top: 40px;
     padding-bottom: 40px;
     padding-left: 40px;
+    border-bottom: solid;
 }
 
-#hrViewAllDishes {
-    color: #000000;
-    background-color: #000000;
-    height: 2px;
-}
 #separatorDiv {
     height: 40px;
+}
+
+#searchButton {
+    margin-top: 0px;
+}
+#confirmDinner {
+    margin: 10px;
 }
 
 
