model now all functions are sketched

--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,13 @@ button {
 
 /*viewAllDishes*/
 
+.col-md-2{
+    padding-top: 20px;
+    width: 20%;
+    float: left;
+    height: 200px;
+}
+
 #menuScroll {
     overflow: hidden;
     overflow-y: scroll;
