some fund on ViewRecipe

--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ button {
     padding-left: 20px;
 }
 
-#allDishPics {
+.img-rounded {
     float: center;
     height: 100px;
     width: 150px;
