--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,6 @@ button {
     border-style: solid;
     text-align: center;
     min-height: 600px;
-    width:auto;
 }
 
 /*Recipe details*/
@@ -127,6 +126,7 @@ button {
 
 #searchDish {
     margin-left: 10px;
+    width: 74%
 }
 
 #selectDish {
