--- a/styles.css
+++ b/styles.css
@@ -196,8 +196,11 @@ button {
     text-align: right;
 }
 #overviewDishes {
-    height:100%;
+    /*height:100%;*/
     border-right: solid;
+    overflow: hidden;
+    overflow-y: scroll;
+    height: 300px;
 }
 #overviewTotalCost {
     height:100%;
