print recipe now has scroll bar. there's a bug
not possible to add two dishes that are the same in the left “my
dinner” table

--- a/styles.css
+++ b/styles.css
@@ -212,6 +212,15 @@ button {
     text-align: center;
 }
 
+/*print recipe*/
+#printRecipe {
+    /*height:100%;*/
+    border-right: solid;
+    overflow: hidden;
+    overflow-y: scroll;
+    height: 400px;
+} 
+
 
 
 
