--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ button {
 #pageLeft {
     border-style: solid;
     text-align: center;
-    min-height: 600px;
+    max-height: 600px;
     padding-left: 30px;
     padding-right: 30px;
 }
@@ -81,7 +81,7 @@ button {
     border: solid;
     overflow: hidden;
     overflow-y: scroll;
-    height: 600px;
+    max-height: 600px;
 }
 #igredientTable tr{
     border: hidden;
@@ -222,12 +222,21 @@ button {
 
 /*print recipe*/
 #printRecipe {
-    /*height:100%;*/
-    border-right: solid;
     overflow: hidden;
     overflow-y: scroll;
     height: 400px;
 } 
+
+#printPic {
+    height: 300px;
+    width: 300px;
+    float: left;
+    margin-right: 15px;
+}
+
+#printDishName {
+    width: 300px;
+}
 
 
 
