--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,11 @@ button {
     font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 .fa {
+    color: #FFDB94;
     display: block;
     margin-left: auto;
-    margin-right: auto; 
+    margin-right: auto;
+    margin-top: 100px;
 }
 .wait {
     text-align: center;   
